--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     gap: 80px;
-    margin: 80px 170px;
+    margin: 30px 170px;
 }
 .about-title{
     position: relative;
@@ -13,7 +13,8 @@
     padding: 0px 30px;
     font-weight: 600;
     font-size: 80px;
-}.about-title img{
+}
+.about-title img{
     right: 0;
     bottom: 0;
     z-index: -1;
@@ -25,7 +26,7 @@
 }
 .about-left img{
     width: 400px;
-    height: 400px;
+    height: 400px; ;
     border-radius: 50%;
     transition: 0.5s;
 }
@@ -38,12 +39,12 @@ cursor: pointer;
     flex-direction: column;
     gap: 50px;
 }
-.about-paragraph{
+.about-paragraph p{
     display: flex;
     flex-direction: column;
     font-size: 20px;
     font-weight: 500;
-    line-height: 1.5;
+    line-height: 40px;
     gap: 25px;
 
 }
@@ -76,6 +77,7 @@ cursor: pointer;
     display: flex;
     justify-content: space-around;
     width: 100%;
+    gap: 30px;
     margin-bottom: 88px;
 }
 .about-achievement{
@@ -105,4 +107,69 @@ cursor: pointer;
 .about-achievement:hover{
     transform: scale(1.12);
     transition: 0.5s;
+}
+
+
+/* // make the responsive for mobile views */
+@media (max-width:768px) {
+    .about{
+        margin-top: 100px;
+        gap: 40px;
+    }
+    
+    .about-title h1{
+    padding: 0px 30px;
+    font-weight: 600;
+    font-size: 40px;
+}
+.about-left img{
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    transition: 0.5s;
+}
+.about-sections{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+}
+.about-achievement h1{
+    font-size: 30px;
+}
+.about-achievement p{
+    font-size: 20px;
+}
+.about-title img{
+    right: -20px;
+    width: 130px;
+}
+.about-paragraph p{
+    line-height: 36px;
+    font-size: 18px;
+}
+.about-right{
+    gap: 25px;
+}
+.about-skills{
+    gap: 10px;
+}
+.about-skill p{
+    font-size: 20px;
+    gap: 45px;
+}
+.about-sections{
+    gap: 30px;
+}
+.about-skill hr{
+    height: 4px;
+}
+.about-achievements{
+    justify-content: space-between;
+}
+.about-achievement p{
+    font-size: 16px;
+text-align: center;}
+
+    
 }
