--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -6,29 +6,36 @@
     gap: 80px;
     margin: 80px 170px;
 }
+
 .contact-title{
-    position: relative;}
+    position: relative;
+}
+
 .contact-title h1{
    font-size: 80px;
    font-weight: 600;
    padding: 0px 30px;
 }
+
 .contact-title img{
     position: absolute;
     right: 0;
     bottom: 0;
     z-index: -1;
 }
+
 .contact-sections{
     display: flex;
     gap: 150px;
 }
+
 .contact-one{
     display: flex;
     flex-direction: column;
     gap: 20px;
     align-items: flex-start;
 }
+
 .contact-one h1{
     font-size: 40px;
     font-weight: 700;
@@ -38,52 +45,70 @@
     -webkit-text-fill-color: transparent;
 
 }
+
 .contact-one p{
     font-size: 20px;
     font-weight: 500;
+    line-height: 32px;
 }
+
 .contact-details{
     display: flex;
     flex-direction: column;
     gap: 20px;
-
-
 }
+
 .contact-detail{
     display: flex;
     gap: 15px;
 }
+
 .contact-form{
     display: flex;
     flex-direction: column;
     align-items: start;
 }
+
 .contact-form label{
     color: rgb(168, 138, 196);
     font-size: 20px;
     font-weight: 500;
-
 }
+
 .contact-form input{
     border: none;
-    border-radius: 4px;
+    border-radius: 15px;
     padding-left: 20px;
     font-size: 20px;
     height: 70px;
-    width: 600px;
+    width: 650px;
     background: #32323c;
     color: #A0A0A0;
 
 }
+
+.contact-form input:hover{
+transform: scale(1.02);
+transition: 0.6s;
+border: 2px solid rgb(221, 168, 70);
+}
+
 .contact-form textarea{
     border: none;
-    border-radius: 4px;
+    border-radius: 10px;
     padding-left: 25px;
     font-size: 20px;
     width: 650px;
     background: #32323c;
     color: #A0A0A0;
 }
+
+.contact-form textarea:hover{
+    transform: scale(1.02);
+    transition: 0.6s;
+    border: 2px solid rgb(221, 168, 70);
+    }
+
 .contact-form button{
     border: none;
     border-radius: 50px;
@@ -92,11 +117,64 @@
     margin-bottom: 45px;
     margin-top: 40px;
     padding: 20px 50px;
-    background:navy;
+    background-color:rgba(38, 156, 235, 0.637);
     cursor: pointer;
     transition: 0.3s;
-
 }
+
 .contact-form button:hover{
     transform: scale(1.10);
+}
+
+
+@media (max-width:768px) {
+    .contact{
+    align-items: start;
+    gap: 50px;
+    margin: 50px 70px;
+}
+.contact-title h1{
+    padding: 0;
+    font-size: 50px;
+}
+.contact-title img{
+    width: 130px;
+    margin-right: -20px;
+}
+.contact-sections{
+    flex-direction: column;
+    gap: 65px;
+}
+.contact-one h1{
+    font-size: 30px;
+}
+.contact-one p{
+    font-size: 18px;
+}
+.contact-details{
+    gap: 10px;
+}
+.contact-detail{
+    gap: 20px;
+}
+.contact-detail img{
+    width: 20px;
+    height: 20px;
+}
+.contact-form label{
+    font-size: 18px;
+}
+.contact-form input{
+    width: 100%;
+    font-size: 18px;
+}
+.contact-form textarea{
+    width: 95%;
+    font-size: 18px;
+}
+.contact-form button{
+    font-size: 18px;
+    padding: 15px 30px;
+}
+    
 }
