--- a/src/components/navbar/NavBar.css
+++ b/src/components/navbar/NavBar.css
@@ -1,9 +1,6 @@
-html {
-  scroll-behavior: smooth;
-}
+
 .nav-menu li a.active {
-  background-color: hotpink;
-  color: white;
+  color: rgba(38, 156, 235, 0.637);
   border-radius: 5px;
 }
 
@@ -16,8 +13,9 @@ html {
   position: fixed;
   top: 0;
   width: 100%;
-  background: #0a0905;
-  z-index: 1000;
+  background: #0a0905
+  ;
+  z-index: 10;
   padding: 10px 20px;
 }
 
@@ -36,41 +34,69 @@ html {
   display: flex;
   align-items: center;
   font-size: 20px;
-  gap: 60px;
-  margin: 0;
+  gap: 30px;
+  margin: 0px 100px 0px 0px;
   padding: 0;
 }
 
 .nav-menu li {
   list-style: none;
 }
-
-.nav-menu li a {
-  color: grey;
-  text-decoration: none;
-  padding: 8px 12px;
-  border-radius: 5px;
-  transition: 0.3s;
-}
-
-.nav-menu li:hover {
+.nav-menu li:hover{
   transform: scale(1.12);
   transition: 0.5s;
-  color: white;
 }
-
-.connect-me {
-  border-radius: 50px;
-  background: linear-gradient(270deg, rgb(100, 95, 63), rgba(15, 72, 138, 0.849));
-  font-size: 22px;
-  padding: 12px 30px;
+.link {
+  color: #fff;
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 19px;
+  padding: 8px 12px;
+  transition: 0.3s;
   cursor: pointer;
-  transition: 0.5s;
-  color: white;
-  margin-right: 17px;
 }
 
-.connect-me:hover {
-  transform: scale(1.05);
-  border: 2px solid rgb(5, 163, 89);
+.link:hover {
+  color: wheat;
+  transform: scale(1.12);
+  transition: 0.5s;
 }
+
+.link.active {
+  color: #18294e;
+  font-weight: 700;
+}
+.hamburger{
+  cursor: pointer;
+  color: white;
+  display: none;
+  margin-right:120px;
+}
+
+@media (max-width:768px) {
+  .hamburger {
+    display:block;
+    margin-right:40px;
+
+    
+  }
+
+  .nav-menu {
+    flex-direction:column;
+    position:fixed;
+    gap: 20px;
+    top: 60px;
+    right: -100px;
+    background-color:#1F0016;
+    width:250px;
+    height:100%;
+    display: none;
+    border-radius:5px;
+    padding: 10px;
+  }
+
+  .nav-menu.show {
+    display: flex;
+  }
+}
+
